--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -6,15 +6,15 @@ on:
       pat-address:
         description: 'Pat file URL'
         required: true
-        default: 'https://global.download.synology.com/download/DSM/release/7.0.1/42218/DSM_DS918%2B_42218.pat'
+        default: 'https://cndl.synology.cn/download/DSM/release/7.0.1/42218/DSM_DS716%2BII_42218.pat'
       toolchain:
         description: 'DSM toolchain URL for repack zImage'
         required: true
-        default: 'https://sourceforge.net/projects/dsgpl/files/Tool%20Chain/DSM%207.0.0%20Tool%20Chains/Intel%20x86%20Linux%204.4.180%20%28Apollolake%29/apollolake-gcc750_glibc226_x86_64-GPL.txz'
+        default: 'https://sourceforge.net/projects/dsgpl/files/Tool%20Chain/DSM%207.0.0%20Tool%20Chains/Intel%20x86%20Linux%203.10.108%20%28Braswell%29/braswell-gcc750_glibc226_x86_64-GPL.txz'
       linux-src:
         description: 'Linux kernel source URL for repack zImage'
         required: true
-        default: 'https://cdn.kernel.org/pub/linux/kernel/v4.x/linux-4.4.180.tar.xz'
+        default: 'https://cdn.kernel.org/pub/linux/kernel/v3.x/linux-3.10.18.tar.xz'
 
 jobs:
   build:
