--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -6,9 +6,9 @@ on:
       pat-address:
         description: 'Pat file URL'
         required: true
-        default: 'https://global.download.synology.com/download/DSM/release/7.0.1/42218/DSM_DS918%2B_42218.pat'
+        default: 'file://localhost/root/DSM_DS920%2B_42550.pat'
       toolchain:
-        description: 'DSM toolchain URL for repack zImage'
+        description: 'https://github.com/jumkey/redpill-load/blob/develop/tools/rebuild_all.sh'
         required: true
         default: 'https://sourceforge.net/projects/dsgpl/files/Tool%20Chain/DSM%207.0.0%20Tool%20Chains/Intel%20x86%20Linux%204.4.180%20%28Apollolake%29/apollolake-gcc750_glibc226_x86_64-GPL.txz'
       linux-src:
