--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -6,7 +6,7 @@ on:
       pat-address:
         description: 'Pat file URL'
         required: true
-        default: 'https://global.download.synology.com/download/DSM/release/7.0.1/42218/DSM_DS918%2B_42218.pat'
+        default: 'https://cndl.synology.cn/download/DSM/release/7.1/42661-1/DSM_DS920%2B_42661.pat?model=DS920%2B&bays=4&dsm_version=7.1&build_number=42661'
       toolchain:
         description: 'DSM toolchain URL for repack zImage'
         required: true
